--- a/RoboKnights Base Code 2020/.vscode/settings.json
+++ b/RoboKnights Base Code 2020/.vscode/settings.json
@@ -11,5 +11,9 @@
     ".classpath": true,
     ".project": true
   },
-  "C_Cpp.default.configurationProvider": "vscode-wpilib"
+  "C_Cpp.default.configurationProvider": "vscode-wpilib",
+  "files.associations": {
+    "*.inc": "cpp",
+    "iostream": "cpp"
+  }
 }
